--- a/functions/views/galleta.hbs
+++ b/functions/views/galleta.hbs
@@ -5,6 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="description" content="{{description}}" />
+  <link rel="canonical" href="https://sciencecookies.net/galletas/{{month}}/{{file}}"/>
   <link rel="shortcut icon" href="../../img/logoT.svg">
   <title>Science Cookies - {{title}}</title>
 
