--- a/functions/views/galleta.hbs
+++ b/functions/views/galleta.hbs
@@ -358,6 +358,8 @@
   <script src="../../js/global.js"></script>
   <script src="../../js/newCookApp.js"></script>
 
+  <script>{{{java}}}</script>
+
   <!--AddThis-->
   <script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-5f13599e10bd5c2b"></script>
 </body>
