--- a/public/css/main.css
+++ b/public/css/main.css
@@ -47,3 +47,19 @@ h5{
 h6{
   font-size: 1.1rem;
 }
+.tbar {
+  position: fixed;
+  top: 20%;
+  width: 3pc;
+  z-index: 100020;
+  background: none;
+  animation-name: slideInRight;
+  animation-fill-mode: both;
+  animation-timing-function: ease-out;
+  animation-duration: .4s;
+}
+.tbar-right {
+  right: 0;
+  float: right;
+  left: auto;
+}
