finished Edit.html

--- a/functions/views/galleta.hbs
+++ b/functions/views/galleta.hbs
@@ -239,12 +239,10 @@
         </div>
         <div class="row justify-content-start mb-2" id="btnsFL">
           <div class="col-auto">
-            <button class="btn btn-outline-light p-1 disabled mt-2 mx-2" id="btnFav">Añadir a favoritos <i
-                class="far fa-heart"></i></button>
+            <button class="btn btn-outline-light p-1 disabled mt-2 mx-2" id="btnFav">Añadir a favoritos <i class="far fa-heart" id="btnFavTxt"></i><span id="favCount" class="badge badge-dark"></span></button>
           </div>
           <div class="col-auto">
-            <button class="btn btn-outline-light p-1 disabled m-2" id="btnLike">Dar me gusta <i
-                class="far fa-thumbs-up"></i></button>
+            <button class="btn btn-outline-light p-1 disabled m-2" id="btnLike">Dar me gusta <i class="far fa-thumbs-up" id="btnLikeTxt"></i><span id="likeCount" class="badge badge-dark"></span></button>
           </div>
         </div>
         <!--Comentarios-->
