--- a/functions/views/galleta.hbs
+++ b/functions/views/galleta.hbs
@@ -7,7 +7,7 @@
   <meta name="description" content="{{description}}" />
   <link rel="canonical" href="https://sciencecookies.net/galletas/{{month}}/{{file}}"/>
   <link rel="shortcut icon" href="../../img/logoT.svg">
-  <title>Science Cookies - {{title}}</title>
+  <title>{{title}} - Science Cookies</title>
 
   <!--Firebase app-->
   <script src="https://www.gstatic.com/firebasejs/8.2.1/firebase-app.js"></script>
