--- a/functions/views/archivo.hbs
+++ b/functions/views/archivo.hbs
@@ -4,18 +4,15 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <meta name="description" content="{{description}}" />
-  <link rel="canonical" href="https://sciencecookies.net/galletas/{{month}}/{{file}}"/>
-  <link rel="shortcut icon" href="../../img/logoT.svg">
-  <title>{{title}} - Science Cookies</title>
+  <meta name="description" content="Aquí puedes encontrar todas las galletas que tenemos." />
+  <link rel="shortcut icon" href="img/logoT.svg">
+  <title>Science Cookies - Archivo</title>
 
   <!--Firebase app-->
   <script src="https://www.gstatic.com/firebasejs/8.2.1/firebase-app.js"></script>
   <!--Firebase features-->
   <script src="https://www.gstatic.com/firebasejs/8.2.1/firebase-auth.js"></script>
   <script src="https://www.gstatic.com/firebasejs/8.2.1/firebase-analytics.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/8.2.1/firebase-storage.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/8.2.1/firebase-database.js"></script>
   <script src="https://www.gstatic.com/firebasejs/8.2.1/firebase-firestore.js"></script>
   <script src="https://www.gstatic.com/firebasejs/8.2.1/firebase-functions.js"></script>
 
@@ -51,7 +48,7 @@
   <!--Google fonts-->
   <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&display=swap" rel="stylesheet">
 
-  <link rel="stylesheet" href="../../css/main.css">
+  <link rel="stylesheet" href="css/main.css">
 
 </head>
 
@@ -59,27 +56,28 @@
 
   <!--Navbar-->
   <nav class="navbar sticky-top navbar-expand-md navbar-dark" style="background-color: #791acd;">
-    <img src="../../img/wlogoT.svg" height="30" class="d-inline-block align-center mr-2" alt="Science Cookies Logo"
+    <img src="img/wlogoT.svg" height="30" class="d-inline-block align-center mr-2" alt="Science Cookies Logo"
       loading="lazy">
-    <a class="navbar-brand" href="../../index">Science Cookies</a>
+    <a class="navbar-brand" href="https://sciencecookies.net">Science Cookies</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarM" aria-controls="navbarM"
       aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
     <div class="collapse navbar-collapse" id="navbarM">
       <ul class="navbar-nav mr-auto py-0">
-        <a class="btn btn-dark mx-2 my-1" href="../../index">Inicio</a>
-        <a class="btn btn-dark mx-2 my-1" href="../../quienes-somos">¿Quienes somos?</a>
-        <a class="btn btn-dark mx-2 my-1" href="../../contacto">Contacto</a>
-        <a class="btn btn-dark mx-2 my-1" href="../../archivo">Archivo</a>
+        <a class="btn btn-dark mx-2 my-1" href="https://sciencecookies.net">Inicio</a>
+        <a class="btn btn-dark mx-2 my-1" href="quienes-somos">¿Quienes somos?</a>
+        <a class="btn btn-dark mx-2 my-1" href="contacto">Contacto</a>
+        <a class="btn btn-dark mx-2 my-1 active">Archivo</a>
       </ul>
       <div class="row justify-content-end">
         <div class="dropdown mr-4 dropleft">
           <button class="btn btn-dark dropdown-toggle p-2" type="button" id="usrDrpdwn" data-toggle="dropdown"
-            aria-haspopup="true" aria-expanded="false"><i class="fas fa-user" id="icnUsr"></i><img src="" height="30"
+            aria-haspopup="true" aria-expanded="false"><i class="fas" id="icnUsr"></i><img src="" height="30"
               class="d-inline-block align-center ml-2 rounded-circle" alt="" id="picUsr"></button>
           <div class="dropdown-menu dropdown-menu-right bg-dark pl-1" aria-labelledby="usrDrpdwn">
-            <a id="btnPrfl" class="btn btn-link text-decoration-none text-light d-none" href="../../perfil">Mi perfíl</a>
-            <a id="btnPref" class="btn btn-link text-decoration-none text-light d-none"href="../../perfil?tab=pref">Preferencias</a>
-            <a id="btnDraft" class="btn btn-link text-decoration-none text-light d-none" href="../../drafts">Borradores</a>
+            <a id="btnPrfl" class="btn btn-link text-decoration-none text-light d-none" href="perfil">Mi perfíl</a>
+            <a id="btnPref" class="btn btn-link text-decoration-none text-light d-none"
+              href="perfil?tab=pref">Preferencias</a>
+            <a id="btnDraft" class="btn btn-link text-decoration-none text-light d-none" href="drafts">Borradores</a>
             <div class="dropdown-divider ml-1 mr-2"></div>
             <button id="btnLgO" class="btn btn-link text-decoration-none text-light d-none">Cerrar sesión</button>
             <button id="btnLgI" class="btn btn-link text-decoration-none text-light d-none" data-toggle="modal"
@@ -105,51 +103,7 @@
           <div id="firebaseui-auth-container"></div>
         </div>
         <div class="modal-footer">
-          <button type="button" class="btn btn-secondary" data-dismiss="modal"
-            onclick="document.getElementById('mdlRgsL').innerHTML='Inicia sesión o regístrate';reporting=null">Cancelar</button>
-        </div>
-      </div>
-    </div>
-  </div>
-  <!--Report modal-->
-  <div class="modal fade" id="mdlRprt" tabindex="-1" role="dialog" aria-labelledby="mdlRprtL" aria-hidden="true"
-    data-backdrop="static">
-    <div class="modal-dialog modal-dialog-centered">
-      <div class="modal-content">
-        <div class="modal-header">
-          <h5 class="modal-title" id="mdlRprtL">Reportar contenido</h5>
-          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-            <span aria-hidden="true">&times;</span>
-          </button>
-        </div>
-        <div class="modal-body">
-          <form id="frmRprt">
-            <div class="form-group row">
-              <label for="inReas" class="col-sm-2 col-form-label">Razón</label>
-              <div class="col-sm-10">
-                <select id="inReas" class="form-control" required>
-                  <option value="">Escoge...</option>
-                  <option value="Spam o contenido comercial no deseado">Spam o contenido comercial no deseado</option>
-                  <option value="Abuso o acoso">Abuso o acoso</option>
-                  <option value="Fomenta el odio o la violencia">Fomenta el odio o la violencia</option>
-                  <option value="Lenguaje ofensivo">Lenguaje ofensivo</option>
-                  <option value="Material sexualmente explícito">Material sexualmente explícito</option>
-                  <option value="Otro">Otro</option>
-                </select>
-              </div>
-            </div>
-            <div class="form-group row">
-              <label for="inText" class="col-sm-2 col-form-label">Detalles</label>
-              <div class="col-sm-10">
-                <textarea type="text" class="form-control" id="inText" placeholder="Opcional" rows="3"
-                  maxlength="300"></textarea>
-              </div>
-            </div>
-          </form>
-        </div>
-        <div class="modal-footer">
           <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancelar</button>
-          <button type="submit" class="btn btn-primary" form="frmRprt">Reportar</button>
         </div>
       </div>
     </div>
@@ -162,7 +116,7 @@
 
   <!--Página-->
   <div class="container-fluid text-white"
-    style="background-color: black;background-image: url('../../img/fondo1.jpg');background-position: center top;background-attachment: fixed;">
+    style="background-color: black;background-image: url('img/fondo1.jpg');background-position: center top;background-attachment: fixed;">
     <div class="row justify-content-around">
       <div class="col-md-3 col-xl-2 sidebar my-0 ml-lg-3 mr-0 ml-md-2 py-md-1 pl-md-3 text-dark"
         style="background-color: #FFF8E7;">
@@ -228,69 +182,22 @@
         </nav>
       </div>
       <div class="col-12 col-sm-9 col-md-6 col-xl-7 py-md-3 pl-md-3">
-        <p class="text-center"><img class="mt-3 mb-4 w-75" src="../../img/NLogoHalignT.svg"
+        <p class="text-center"><img class="mt-3 mb-4 w-75" src="img/NLogoHalignT.svg"
             alt="Science Cookies: artículos de ciencia con chispas de chocolate"></p>
+        <!--Aquí va el contenido-->
+        <h1 class="text-center">Archivo de Science Cookies</h1>
+        <nav aria-label="breadcrumb">
+          <ol class="breadcrumb mb-3">
+            <li class="breadcrumb-item active" aria-current="page">Archivo</li>
+          </ol>
+        </nav>
         <div class="container-fluid mb-2 rounded-lg p-3" style="background-color:rebeccapurple;">
-          <!--Aquí va el contenido-->
-          {{#each content}}
+          <p>Aquí puedes encontrar todas las galletas que tenemos.</p>
+          {{#each years}}
             {{{this}}}
           {{/each}}
-          <!--Aquí termina el contenido-->
         </div>
-        <div class="row justify-content-start mb-2" id="btnsFL">
-          <div class="col-auto">
-            <button class="btn btn-outline-light p-1 disabled mt-2 mx-2" id="btnFav">Añadir a favoritos <i class="far fa-heart" id="btnFavTxt"></i><span id="favCount" class="badge badge-dark ml-w"></span></button>
-          </div>
-          <div class="col-auto">
-            <button class="btn btn-outline-light p-1 disabled m-2" id="btnLike">Dar me gusta <i class="far fa-thumbs-up" id="btnLikeTxt"></i><span id="likeCount" class="badge badge-dark m-2"></span></button>
-          </div>
-        </div>
-        <!--Comentarios-->
-        <div class="row">
-          <button class="btn btn-block btn-scckie mb-2 disabled" id="btnLdComs">Cargar comentarios</button>
-          <div class="container-fluid d-none" id="spnCom">
-            <div class="text-center">
-              <div class="spinner-border text-primary" role="status"><span class="sr-only"></span></div>
-            </div>
-          </div>
-          <div class="container-fluid text-dark d-none" id="cntComs">
-            <div class="container-fluid bg-light p-2 rounded-lg mb-1">
-              <div class="row">
-                <div class="col" id="comCount">Aún no hay comentarios</div>
-              </div>
-              <div class="dropdown-divider"></div>
-              <form id="frmNwCom">
-                <div class="form-group row">
-                  <div class="col-auto pr-0">
-                    <label for="inNwCom"><img src="" alt="" class="rounded-circle" height="35" width="35"
-                        id="ppCom"></label>
-                  </div>
-                  <div class="col">
-                    <textarea type="text" class="form-control-plaintext border-bottom" id="inNwCom" maxlength="200"
-                      placeholder="Nuevo comentario" required rows="3"></textarea>
-                    <small class="text-muted">Máximo 200 caracteres</small>
-                  </div>
-                </div>
-              </form>
-              <div class="row justify-content-end d-none" id="frmNwComBtns">
-                <div class="col-auto">
-                  <button class="btn btn-secondary"
-                    onclick="document.getElementById('inNwCom').value='';document.getElementById('frmNwComBtns').classList.add('d-none');replying=-1;document.getElementById('inNwCom').setAttribute('placeholder','Nuevo comentario');"
-                    id="btnCanCom">Cancelar</button>
-                  <button class="btn btn-scckie" type="submit" form="frmNwCom" id="btnAddCom">Comentar</button>
-                </div>
-              </div>
-            </div>
-            <div class="container-fluid text-dark d-none p-0" id="cntComs2">
-            </div>
-          </div>
-          <button class="btn btn-block btn-scckie mb-2 disabled d-none" id="btnLdMrComs">Más comentarios</button>
-          <div class="container-fluid d-none" id="spnCom2">
-            <div class="text-center">
-              <div class="spinner-border text-primary" role="status"><span class="sr-only"></span></div>
-            </div>
-          </div>
-        </div>
+        <!--Aquí termina el contenido-->
       </div>
       <!--Anuncios V-->
       <div
@@ -300,10 +207,6 @@
     <!--Anuncios H-->
     <div class="row bg-info px-2 text-dark d-sm-none justify-content-center" id="adsH"></div>
   </div>
-
-  <!--Id@#IMPORTANTE-->
-  <input class="form-check-input d-none" type="checkbox" id="getId" readonly value="{{cookieID}}">
-  <input class="form-check-input d-none" type="checkbox" id="getTitle" readonly value="{{titleInf}}">
 
   <!--Bootstrap-->
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
@@ -316,10 +219,7 @@
     integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI"
     crossorigin="anonymous"></script>
 
-  <script src="../../js/global.js"></script>
-  <script src="../../js/newCookApp.js"></script>
-
-  <script>{{{java}}}</script>
+  <script src="js/global.js"></script>
 
   <!--AddThis-->
   <script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-5f13599e10bd5c2b"></script>
