--- a/functions/views/archTrim.hbs
+++ b/functions/views/archTrim.hbs
@@ -46,7 +46,7 @@
     <!--Google fonts-->
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&display=swap" rel="stylesheet">
 
-    <link rel="stylesheet" href="../css/main.css">
+    <link rel="stylesheet" href="../../css/main.css">
 
   </head>
   <body>
