recomCookies from js

--- a/functions/views/archivo.hbs
+++ b/functions/views/archivo.hbs
@@ -127,57 +127,12 @@
             style="font-size: 1.8rem;"><i class="fas fa-bars"></i></button>
         </div>
         <nav class="collapse sdbarCnt" id="sdbarL">
-          <div class="col justify-content-center px-5 px-md-0 px-lg-3 px-xl-2">
+          <div class="col justify-content-center px-3 px-md-0 px-lg-3 px-xl-2">
             <h5 class="text-center">La galleta más nueva</h5>
-            <a href="" class="text-decoration-none text-dark d-none d-md-inline" id="crd0">
-              <div class="card mb-2">
-                <img id="crd0i" src="" class="card-img-top" alt="">
-                <div class="card-body" id="crd0t"></div>
-              </div>
-            </a>
-            <a href="" class="text-decoration-none text-dark d-md-none" id="rmed0">
-              <div class="media mb-3">
-                <img id="rmed0i" src="" class="align-self-center mr-3" alt="" width="64px" height="64px">
-                <div class="media-body" id="rmed0t"></div>
-              </div>
-            </a>
+            <div id="newCook"></div>
+            <div class="dropdown-divider d-md-none"></div>
             <h5 class="text-center">Las galletas más populares</h5>
-            <a href="" class="text-decoration-none text-dark d-none d-md-inline" id="crd1">
-              <div class="card mb-2">
-                <img id="crd1i" src="" class="card-img-top" alt="">
-                <div class="card-body" id="crd1t"></div>
-              </div>
-            </a>
-            <a href="" class="text-decoration-none text-dark d-none d-md-inline" id="crd2">
-              <div class="card mb-2">
-                <img id="crd2i" src="" class="card-img-top" alt="">
-                <div class="card-body" id="crd2t"></div>
-              </div>
-            </a>
-            <a href="" class="text-decoration-none text-dark d-none d-md-inline" id="crd3">
-              <div class="card mb-2">
-                <img id="crd3i" src="" class="card-img-top" alt="">
-                <div class="card-body" id="crd3t"></div>
-              </div>
-            </a>
-            <a href="" class="text-decoration-none text-dark d-md-none" id="rmed1">
-              <div class="media mb-3">
-                <img id="rmed1i" src="" class="align-self-center mr-3" alt="" width="64px" height="64px">
-                <div class="media-body" id="rmed1t"></div>
-              </div>
-            </a>
-            <a href="" class="text-decoration-none text-dark d-md-none" id="rmed2">
-              <div class="media mb-3">
-                <img id="rmed2i" src="" class="align-self-center mr-3" alt="" width="64px" height="64px">
-                <div class="media-body" id="rmed2t"></div>
-              </div>
-            </a>
-            <a href="" class="text-decoration-none text-dark d-md-none" id="rmed3">
-              <div class="media mb-3">
-                <img id="rmed3i" src="" class="align-self-center mr-3" alt="" width="64px" height="64px">
-                <div class="media-body" id="rmed3t"></div>
-              </div>
-            </a>
+            <div id="popCook"></div>
           </div>
         </nav>
       </div>
