--- a/functions/views/archTrim.hbs
+++ b/functions/views/archTrim.hbs
@@ -33,6 +33,15 @@
       firebase.analytics();
     </script>
 
+    <!-- Clarity tracking code for https://sciencecookies.net/ -->
+    <script>
+      (function(c,l,a,r,i,t,y){
+        c[a]=c[a]||function(){(c[a].q=c[a].q||[]).push(arguments)};
+        t=l.createElement(r);t.async=1;t.src="https://www.clarity.ms/tag/"+i;
+        y=l.getElementsByTagName(r)[0];y.parentNode.insertBefore(t,y);
+      })(window, document, "clarity", "script", "56t5m147ti");
+    </script>
+    
     <!--FirebaseUI-->
     <script src="https://www.gstatic.com/firebasejs/ui/4.6.1/firebase-ui-auth__es.js"></script>
     <link type="text/css" rel="stylesheet" href="https://www.gstatic.com/firebasejs/ui/4.6.1/firebase-ui-auth.css" />
