--- a/functions/views/calendario.hbs
+++ b/functions/views/calendario.hbs
@@ -4,8 +4,10 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <link rel="shortcut icon" href="img/logoT.svg">
-  <title>Science Cookies - Editar calendario</title>
+  <meta name="description" content="{{descriptionShort}}" />
+  <link rel="canonical" href="https://sciencecookies.net/calendario-astronomico/{{year}}/{{month}}" />
+  <link rel="shortcut icon" href="../../img/logoT.svg">
+  <title>{{title}} - Science Cookies</title>
 
   <!--Firebase app-->
   <script src="https://www.gstatic.com/firebasejs/8.2.1/firebase-app.js"></script>
@@ -58,7 +60,7 @@
   <!--Google fonts-->
   <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&display=swap" rel="stylesheet">
 
-  <link rel="stylesheet" href="css/main.css">
+  <link rel="stylesheet" href="../../css/main.css">
 
   <style>
     .table-bordered thead,
@@ -85,19 +87,18 @@
 
   <!--Navbar-->
   <nav class="navbar sticky-top navbar-expand-lg navbar-dark" style="background-color: #791acd;">
-    <img src="img/wlogoT.svg" height="30" class="d-inline-block align-center mr-2" alt="Science Cookies Logo"
+    <img src="../../img/wlogoT.svg" height="30" class="d-inline-block align-center mr-2" alt="Science Cookies Logo"
       loading="lazy">
-    <a class="navbar-brand" href="https://sciencecookies.net">Science Cookies</a>
+    <a class="navbar-brand" href="../../index">Science Cookies</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarM" aria-controls="navbarM"
       aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
     <div class="collapse navbar-collapse" id="navbarM">
       <ul class="navbar-nav mr-auto py-0">
-        <a class="btn btn-dark mx-2 my-1" href="https://sciencecookies.net">Inicio</a>
-        <a class="btn btn-dark mx-2 my-1" href="quienes-somos">¿Quienes somos?</a>
-        <a class="btn btn-dark mx-2 my-1" href="contacto">Contacto</a>
-        <a class="btn btn-dark mx-2 my-1" href="archivo">Archivo</a>
-        <a class="btn btn-dark mx-2 my-1" href="calendario-astronomico">Calendario Astronómico</a>
-        <i id="tagLstSave" class="text-light mx-3 my-auto"></i>
+        <a class="btn btn-dark mx-2 my-1" href="../../index">Inicio</a>
+        <a class="btn btn-dark mx-2 my-1" href="../../quienes-somos">¿Quienes somos?</a>
+        <a class="btn btn-dark mx-2 my-1" href="../../contacto">Contacto</a>
+        <a class="btn btn-dark mx-2 my-1" href="../../archivo">Archivo</a>
+        <a class="btn btn-dark mx-2 my-1" href="../../calendario-astronomico">Calendario Astronómico</a>
       </ul>
       <div class="row justify-content-end">
         <div class="dropdown mr-4 dropleft">
@@ -105,12 +106,14 @@
             aria-haspopup="true" aria-expanded="false"><i class="fas" id="icnUsr"></i><img src="" height="30"
               class="d-inline-block align-center ml-2 rounded-circle" alt="" id="picUsr"></button>
           <div class="dropdown-menu dropdown-menu-right bg-dark pl-1" aria-labelledby="usrDrpdwn">
-            <a id="btnPrfl" class="btn btn-link text-decoration-none text-light d-none" href="perfil">Mi perfíl</a>
+            <a id="btnPrfl" class="btn btn-link text-decoration-none text-light d-none" href="../../perfil">Mi
+              perfíl</a>
             <a id="btnPref" class="btn btn-link text-decoration-none text-light d-none"
-              href="perfil?tab=pref">Preferencias</a>
-            <a id="btnDraft" class="btn btn-link text-decoration-none text-light d-none" href="drafts">Borradores</a>
+              href="../../perfil?tab=pref">Preferencias</a>
+            <a id="btnDraft" class="btn btn-link text-decoration-none text-light d-none"
+              href="../../drafts">Borradores</a>
             <a id="btnCals" class="btn btn-link text-decoration-none text-light d-none"
-              href="calendarios">Calendarios</a>
+              href="../../calendarios">Calendarios</a>
             <div class="dropdown-divider ml-1 mr-2"></div>
             <button id="btnLgO" class="btn btn-link text-decoration-none text-light d-none">Cerrar sesión</button>
             <button id="btnLgI" class="btn btn-link text-decoration-none text-light d-none" data-toggle="modal"
@@ -137,33 +140,7 @@
         </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-secondary" data-dismiss="modal"
-            onclick="document.getElementById('mdlRgsL').innerHTML='Inicia sesión o regístrate';">Cancelar</button>
-        </div>
-      </div>
-    </div>
-  </div>
-
-  <!--Publish modal-->
-  <div class="modal fade" id="mdlPublish" tabindex="-1" role="dialog" aria-labelledby="mdlPublishL" aria-hidden="true">
-    <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable">
-      <div class="modal-content">
-        <div class="modal-header">
-          <h5 class="modal-title" id="mdlPublishL">Publicar el calendario</h5>
-          <button type="button" class="close" data-dismiss="modal" aria-label="Close" id="btnCanPublish1"><span
-              aria-hidden="true">&times;</span></button>
-        </div>
-        <div class="modal-body">
-          <p id="mdlPublishTxt"></p>
-          <img src="" alt="" class="@# d-none">
-          <div class="progress my-2 d-none" id="barPublishCont">
-            <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="0"
-              aria-valuemin="0" aria-valuemax="100" style="width: 0%" id="barPublish"></div>
-          </div>
-        </div>
-        <div class="modal-footer">
-          <button type="button" class="btn btn-scckie btn-block" id="btnCnfPublish">Publicar</button>
-          <button type="button" class="btn btn-secondary btn-block" data-dismiss="modal"
-            id="btnCanPublish0">Cancelar</button>
+            onclick="document.getElementById('mdlRgsL').innerHTML='Inicia sesión o regístrate';reporting=null">Cancelar</button>
         </div>
       </div>
     </div>
@@ -183,7 +160,11 @@
           <button class="btn btn-scckie mr-auto" id="btnPriorEve"><i class="fas fa-arrow-left"></i></button>
           <button class="btn btn-scckie" id="btnNextEve"><i class="fas fa-arrow-right"></i></button>
         </div>
-        <div id="eventInfoCont" class="overflow-auto"></div>
+        <div class="overflow-auto">
+          {{#each events}}
+            {{{this}}}
+          {{/each}}
+        </div>
       </div>
     </div>
   </div>
@@ -194,18 +175,6 @@
   </div>
 
   <!--Página-->
-
-  <!--Side toolbar-->
-  <div class="tbar tbar-right btn-toolbar mb-3" role="toolbar">
-    <div class="btn-group-vertical mr-2 btn-group-lg" role="group">
-      <button class="btn btn-scckie" id="btnPrevCal"><i class="fas fa-eye"></i></button>
-      <button class="btn btn-scckie" id="btnPrevMail"><i class="fas fa-envelope"></i></button>
-      <button class="btn btn-scckie d-none" id="btnAprove"><i class="far fa-check-square"></i></button>
-      <button class="btn btn-scckie d-none" id="btnPub" data-toggle="modal" data-target="#mdlPublish"><i
-          class="fas fa-paper-plane"></i></button>
-    </div>
-  </div>
-
   <div class="container-fluid text-white"
     style="background-color: black;background-image: url('../../img/fondo1.jpg');background-position: center top;background-attachment: fixed;">
     <div class="row justify-content-around">
@@ -228,85 +197,21 @@
         </nav>
       </div>
       <div class="col-12 col-sm-9 col-md-6 col-xl-7 py-md-3 pl-md-3">
-        <p class="text-center"><img class="mt-3 mb-4 w-75" src="img/NLogoHalignT.svg"
+        <p class="text-center"><img class="mt-3 mb-4 w-75" src="../../img/NLogoHalignT.svg"
             alt="Science Cookies: artículos de ciencia con chispas de chocolate"></p>
-        <div class="container-fluid mb-2 rounded-lg p-3" style="background-color:rgb(87, 35, 139);">
+        <div class="container-fluid mb-2 rounded-lg p-3" style="background-color:rebeccapurple;">
           <!--Aquí va el contenido-->
-          <h1 class="text-center" id="title"></h1>
-          <div class="row mb-2 justify-content-center">
-            <label class="col-12 col-form-label">Imagen</label>
-            <figure class="col-9 col-xl-6 mb-3 p-0" style="position: relative; border-radius: 0.25rem;">
-              <img id="prevMed" class="card-img m-0" src="" onerror="this.src='img/noimg.png'">
-              <div class="card-img-overlay pt-0" style="padding-left: 0.9rem; padding-right: 0.9rem;">
-                <div class="row mb-2 p-0">
-                  <button class="btn btn-light btn-scckie btn-sm ml-auto" id="btnChgImg"><i class="fas fa-exchange-alt"
-                      aria-hidden="true"></i></button>
-                </div>
-              </div>
-              <br>
-              <div class="row">
-                <div class="col">
-                  <label>Pie de foto</label>
-                  <input class="form-control" type="text" id="inPicCapt">
-                </div>
-              </div>
-              <div class="row">
-                <div class="col">
-                  <label>Alt</label>
-                  <input class="form-control" type="text" id="inPicAlt">
-                </div>
-              </div>
-            </figure>
+          <div class="row px-4 py-2 mb-4">
+            <a href="{{{priorCal}}}" class="btn btn-lg btn-light btn-link-scckie mr-auto" id="btnPriorEve"><i class="fas fa-arrow-left"></i></a>
+            <a href="{{{nextCal}}}" class="btn btn-lg btn-light btn-link-scckie" id="btnNextEve"><i class="fas fa-arrow-right"></i></a>
           </div>
-          <div class="progress mb-2 d-none" id="barChgImgCont">
-            <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="0"
-              aria-valuemin="0" aria-valuemax="100" style="width: 0%" id="barChgImg"></div>
-          </div>
-          <form id="frmChgImg" class="d-none">
-            <div class="row mb-3 justify-content-center">
-              <div class="form-check form-check-inline ml-3">
-                <input class="form-check-input" type="radio" name="radsMedSrc" id="inMedSrc0" required>
-                <label class="form-check-label" for="inMedSrc0">Propio</label>
-              </div>
-              <div class="form-check form-check-inline ml-3">
-                <input class="form-check-input" type="radio" name="radsMedSrc" id="inMedSrc1">
-                <label class="form-check-label" for="inMedSrc1">Externo</label>
-              </div>
-            </div>
-            <div class="custom-file mb-5 d-none" id="inChgImgFileCont">
-              <input type="file" class="custom-file-input" id="inChgImg">
-              <label class="custom-file-label" for="inChgImg" data-browse="Elegir" id="inChgImgL">Subir archivo</label>
-            </div>
-            <div class="row mb-2 d-none" id="inChgImgUrlCont">
-              <div class="col">
-                <label for="inChgImgUrl">URL del archivo</label>
-                <input id="inChgImgUrl" class="form-control" type="text" placeholder="https://imagen.com">
-              </div>
-            </div>
-            <div class="row mb-2 justify-content-center">
-              <button type="submit" class="btn btn-secondary mx-2" id="btnCanChgImg">Cancelar</button>
-              <button type="submit" class="btn btn-primary mx-2" id="btnCnfChgImg">Aceptar</button>
-            </div>
-          </form>
-          <form id="frmText">
-            <div class="row mb-2">
-              <label class="col-12 col-form-label">Descripción</label>
-              <div class="col">
-                <textarea class="form-control" id="inDesc" rows="3"></textarea>
-              </div>
-            </div>
-            <div class="row mb-2">
-              <label class="col-12 col-form-label">Descripción corta</label>
-              <div class="col">
-                <textarea class="form-control" id="inDescShort" rows="3"></textarea>
-              </div>
-            </div>
-            <div class="row mb-2 justify-content-end">
-              <button class="btn btn-light btn-link-scckie mx-3" type="submit"><i class="fas fa-check"></i></button>
-            </div>
-          </form>
-        </div>
-        <div class="container-fluid mb-2 rounded-lg p-2 overflow-auto" style="background-color:#57238b;">
+          <h1 class="text-center">{{{title}}}</h1>
+          <figure class="mx-auto" style="position:relative; border-radius:.25rem; width:75%">
+            <img alt="{{picAlt}}" src="{{picUrl}}" class="w-100">
+            <figcaption style="font-size:70%; font-weight:lighter;">{{{picCapt}}}</figcaption>
+          </figure>
+          <br>
+          <p>{{{description}}}</p>
           <div class="table-responsive">
             <table class="table table-bordered table-light rounded">
               <thead class="thead-dark">
@@ -320,23 +225,16 @@
                   <th style="min-width: 7rem; width: 13%;">Sabado</th>
                 </tr>
               </thead>
-              <tbody id="weeksCont">
-                <!--
-                <tr style="height:10rem;">
-                  <td class="py-0">
-                    <p class="m-0 p-1" style="font-size:x-large;"><b>1</b></p>
-                    <div class="autoOverflow" style="max-height: 7rem;">
-                      <button class="btn text-left p-1 mb-1" style="background-color: #c3e6cb; border-color:#8fd19e;"
-                        onclick="console.log('si')"><small>Nombre del evento</small></button>
-                      <button class="btn btn-scckie btn-block btn-sm"><i class="fas fa-plus"></i></button>
-                    </div>
-                  </td>
-                </tr>-->
+              <tbody>
+                {{#each weeks}}
+                  {{{this}}}
+                {{/each}}
               </tbody>
             </table>
           </div>
+          <p><a href="https://in-the-sky.org/newscal.php?month={{monthNum}}&year={{year}}&maxdiff=6" target="_blank" class="text-warning text-break" rel="nofollow">https://in-the-sky.org/newscal.php?month={{monthNum}}&amp;year={{year}}&amp;maxdiff=6 <i class="fas fa-external-link-alt" aria-hidden="true"></i></a></p>
+          <!--Aquí termina el contenido-->
         </div>
-        <!--Aquí termina el contenido-->
       </div>
       <!--Anuncios V-->
       <div
@@ -346,7 +244,6 @@
     <!--Anuncios H-->
     <div class="row bg-info px-2 text-dark d-sm-none justify-content-center" id="adsH"></div>
   </div>
-  <input type="text" id="toCopy" class="d-none" value="something">
 
   <!--Bootstrap-->
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
@@ -359,8 +256,9 @@
     integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI"
     crossorigin="anonymous"></script>
 
-  <script src="js/global.js"></script>
-  <script src="js/editCalendars.js"></script>
+  <script>{{{java}}}</script>
+  <script src="../../js/global.js"></script>
+  <script src="../../js/calendarApp.js"></script>
 
   <!--AddThis-->
   <script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-5f13599e10bd5c2b"></script>
