archTrim <title>,<meta> fix

--- a/functions/views/archTrim.hbs
+++ b/functions/views/archTrim.hbs
@@ -3,9 +3,9 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="Aquí puedes encontrar todas las galletas de agosto septiembre del 2020."/>
+    <meta name="description" content="Aquí puedes encontrar todas las galletas de {{triLC}} del {{year}}."/>
     <link rel="shortcut icon" href="../../img/logoT.svg">
-    <title>Science Cookies - Archivo 2020 agosto-septiembre</title>
+    <title>Science Cookies - Archivo {{year}} {{triLC}}</title>
 
     <!--Firebase app-->
     <script src="https://www.gstatic.com/firebasejs/7.16.0/firebase-app.js"></script>
