--- a/src/config/config.pug
+++ b/src/config/config.pug
@@ -1,3 +1,6 @@
-- const HOST = "https://sciencecookies.net"; //https://sciencecookies.net http://localhost:5000
+- const HOST = "https://sciencecookies--pr30-pug-conversion-j8xqu70t.web.app/";
+- //https://sciencecookies.net
+- //http://localhost:5000
+- //https://sciencecookies--pr30-pug-conversion-j8xqu70t.web.app/
 - const FBVERSION = "8.3.2";
 - const FBUIVERSION = "4.8.0";
