--- a/src/index.pug
+++ b/src/index.pug
@@ -72,4 +72,4 @@ block content
           span(aria-hidden='true') »
 
 block ownjs
-  script(type="text/javascript" src='/js/index.js')
+  script(src='/js/index.js')
