--- a/src/perfil.pug
+++ b/src/perfil.pug
@@ -108,7 +108,5 @@ block content
               .col-auto.mr-2.p-0
                 button#btnCnfPref.btn.btn-success Guardar cambios
 
-
-
 block ownjs
-  script(type="text/javascript" src='/js/profile.js')
+  script(src='/js/profile.js')
