--- a/src/contacto.pug
+++ b/src/contacto.pug
@@ -45,4 +45,4 @@ block content
           button.btn.btn-outline-success.px-4.px-sm-5.px-md-3.px-lg-5(type='submit') Enviar
 
 block ownjs
-  script(type="text/javascript" src='/js/contact.js')
+  script(src='/js/contact.js')
