--- a/src/drafts.pug
+++ b/src/drafts.pug
@@ -5,7 +5,7 @@ block missHead
   link(rel='canonical' href=HOST+'/drafts')
   title Science Cookies - Borradores
 
-  - const site="";
+  - const site="drafts";
 
 block precontent
   // Plus modal
