--- a/src/calendarios.pug
+++ b/src/calendarios.pug
@@ -34,4 +34,4 @@ block content
           span(aria-hidden='true') »
 
 block ownjs
-  script(src='/js/calDrafts.js')
+  script(src='/js/draftsCal.js')
