adding static files

--- a/src/layouts/main.pug
+++ b/src/layouts/main.pug
@@ -5,8 +5,7 @@ html(lang='es')
 
     block missHead
 
-    style
-      include ../styles/main.scss
+    link(rel="stylesheet" href="/styles/main.scss")
   body
     include ../includes/nav
 
