--- a/functions/views/includes/head.pug
+++ b/functions/views/includes/head.pug
@@ -3,7 +3,7 @@ include ../config/config
 meta(charset='utf-8')
 meta(name='viewport' content='width=device-width, initial-scale=1, shrink-to-fit=no')
 meta(name='google-site-verification' content='pffq0MGMyrYBsgL7f9drofhXb0nfHmqE8-h1YZf83xA')
-link(rel='shortcut icon' href=HOST+'/logoT.56fe5b55.svg')
+link(rel='shortcut icon' href=HOST+'/img/logoT.svg')
 
 
 // Firebase app
