--- a/src/editar.pug
+++ b/src/editar.pug
@@ -160,21 +160,22 @@ block precontent
 
 
 block content
-  form#frmFile
-    .row.mb-2
-      label.col-sm-2.col-lg-4.col-form-label Nombre del archivo
-      .col
-        input#inFile.form-control(type='text' value='titulo-galleta' placeholder='titulo-galleta')
-    .row.mb-2
-      label.col-sm-2.col-form-label Descripción
-      .col
-        textarea#inDesc.form-control(rows='3')
-    .row.mb-2.justify-content-end
-      button#btnCanFile.btn.btn-secondary Revertir
-      button.btn.btn-light.btn-link-scckie.mx-3(type='submit')
-        i.fas.fa-check
-  #cont.container-fluid.mb-2.rounded-lg.p-3(style='background-color:rgb(87, 35, 139);')
-  .container-fluid.mb-2.rounded-lg.p-3(style='background-color:rgb(87, 35, 139);')
+  .container-fluid.mb-2.rounded-lg.p-3(style='background-color:#57238b;')
+    form#frmFile
+      .row.mb-2
+        label.col-sm-2.col-lg-4.col-form-label Nombre del archivo
+        .col
+          input#inFile.form-control(type='text' value='titulo-galleta' placeholder='titulo-galleta')
+      .row.mb-2
+        label.col-sm-2.col-form-label Descripción
+        .col
+          textarea#inDesc.form-control(rows='3')
+      .row.mb-2.justify-content-end
+        button#btnCanFile.btn.btn-secondary Revertir
+        button.btn.btn-light.btn-link-scckie.mx-3(type='submit')
+          i.fas.fa-check
+  #cont.container-fluid.mb-2.rounded-lg.p-3(style='background-color:#57238b;')
+  .container-fluid.mb-2.rounded-lg.p-3(style='background-color:#57238b;')
     .row.mb-2.px-2
       button#btnEditJs.btn.btn-light.btn-link-scckie.ml-auto.mr-2
         i.fas.fa-edit(aria-hidden='true')
