--- a/functions/views/includes/nav.pug
+++ b/functions/views/includes/nav.pug
@@ -1,6 +1,6 @@
 // Navbar
 nav.navbar.sticky-top.navbar-expand-lg.navbar-dark(style='background-color: #791acd;')
-    img.d-inline-block.align-center.mr-2(src=HOST+'/logoT.56fe5b55.svg' height='30' alt='Science Cookies Logo' loading='lazy')
+    img.d-inline-block.align-center.mr-2(src=HOST+'/img/logoT.svg' height='30' alt='Science Cookies Logo' loading='lazy')
     a.navbar-brand(href=HOST) Science Cookies
     button.navbar-toggler(type='button' data-toggle='collapse' data-target='#navbarM' aria-controls='navbarM' aria-expanded='false' aria-label='Toggle navigation')
         span.navbar-toggler-icon
