--- a/functions/views/layouts/main.pug
+++ b/functions/views/layouts/main.pug
@@ -5,7 +5,7 @@ html(lang='es')
 
     block missHead
 
-    link(rel="stylesheet" href=HOST+"/main.d8669397.css")
+    link(rel="stylesheet" href=HOST+"/styles/main.css")
     
   body
     include ../includes/nav
@@ -31,5 +31,5 @@ html(lang='es')
 
     include ../includes/bottom
 
-    script(src=HOST+'/global.c249c66a.js')
+    script(src=HOST+'/js/global.js')
     block ownjs
