--- a/src/editar-calendario.pug
+++ b/src/editar-calendario.pug
@@ -53,56 +53,57 @@ block precontent
         i.fas.fa-calendar-day
 
 block content
-  h1#title.text-center
-  .row.mb-2.justify-content-center
-    label.col-12.col-form-label Imagen
-    figure.col-9.col-xl-6.mb-3.p-0(style='position: relative; border-radius: 0.25rem;')
-      img#prevMed.card-img.m-0(src='/img/noimg.png' onerror="this.src='/noimg.d0bf9177.png'")
-      .card-img-overlay.pt-0(style='padding-left: 0.9rem; padding-right: 0.9rem;')
-        .row.mb-2.p-0
-          button#btnChgImg.btn.btn-light.btn-scckie.btn-sm.ml-auto
-            i.fas.fa-exchange-alt(aria-hidden='true')
-      br
-      .row
-        .col
-          label Pie de foto
-          input#inPicCapt.form-control(type='text')
-      .row
-        .col
-          label Alt
-          input#inPicAlt.form-control(type='text')
-  #barChgImgCont.progress.mb-2.d-none
-    #barChgImg.progress-bar.progress-bar-striped.progress-bar-animated(role='progressbar' aria-valuenow='0' aria-valuemin='0' aria-valuemax='100' style='width: 0%')
-  form#frmChgImg.d-none
-    .row.mb-3.justify-content-center
-      .form-check.form-check-inline.ml-3
-        input#inMedSrc0.form-check-input(type='radio' name='radsMedSrc' required='')
-        label.form-check-label(for='inMedSrc0') Propio
-      .form-check.form-check-inline.ml-3
-        input#inMedSrc1.form-check-input(type='radio' name='radsMedSrc')
-        label.form-check-label(for='inMedSrc1') Externo
-    #inChgImgFileCont.custom-file.mb-5.d-none
-      input#inChgImg.custom-file-input(type='file')
-      label#inChgImgL.custom-file-label(for='inChgImg' data-browse='Elegir') Subir archivo
-    #inChgImgUrlCont.row.mb-2.d-none
-      .col
-        label(for='inChgImgUrl') URL del archivo
-        input#inChgImgUrl.form-control(type='text' placeholder='https://imagen.com')
+  .container-fluid.mb-2.rounded-lg.p-3(style='background-color:#57238b;')
+    h1#title.text-center
     .row.mb-2.justify-content-center
-      button#btnCanChgImg.btn.btn-secondary.mx-2(type='submit') Cancelar
-      button#btnCnfChgImg.btn.btn-primary.mx-2(type='submit') Aceptar
-  form#frmText
-    .row.mb-2
-      label.col-12.col-form-label Descripción
-      .col
-        textarea#inDesc.form-control(rows='3')
-    .row.mb-2
-      label.col-12.col-form-label Descripción corta
-      .col
-        textarea#inDescShort.form-control(rows='3')
-    .row.mb-2.justify-content-end
-      button.btn.btn-light.btn-link-scckie.mx-3(type='submit')
-        i.fas.fa-check
+      label.col-12.col-form-label Imagen
+      figure.col-9.col-xl-6.mb-3.p-0(style='position: relative; border-radius: 0.25rem;')
+        img#prevMed.card-img.m-0(src='/img/noimg.png' onerror="this.src='/noimg.d0bf9177.png'")
+        .card-img-overlay.pt-0(style='padding-left: 0.9rem; padding-right: 0.9rem;')
+          .row.mb-2.p-0
+            button#btnChgImg.btn.btn-light.btn-scckie.btn-sm.ml-auto
+              i.fas.fa-exchange-alt(aria-hidden='true')
+        br
+        .row
+          .col
+            label Pie de foto
+            input#inPicCapt.form-control(type='text')
+        .row
+          .col
+            label Alt
+            input#inPicAlt.form-control(type='text')
+    #barChgImgCont.progress.mb-2.d-none
+      #barChgImg.progress-bar.progress-bar-striped.progress-bar-animated(role='progressbar' aria-valuenow='0' aria-valuemin='0' aria-valuemax='100' style='width: 0%')
+    form#frmChgImg.d-none
+      .row.mb-3.justify-content-center
+        .form-check.form-check-inline.ml-3
+          input#inMedSrc0.form-check-input(type='radio' name='radsMedSrc' required='')
+          label.form-check-label(for='inMedSrc0') Propio
+        .form-check.form-check-inline.ml-3
+          input#inMedSrc1.form-check-input(type='radio' name='radsMedSrc')
+          label.form-check-label(for='inMedSrc1') Externo
+      #inChgImgFileCont.custom-file.mb-5.d-none
+        input#inChgImg.custom-file-input(type='file')
+        label#inChgImgL.custom-file-label(for='inChgImg' data-browse='Elegir') Subir archivo
+      #inChgImgUrlCont.row.mb-2.d-none
+        .col
+          label(for='inChgImgUrl') URL del archivo
+          input#inChgImgUrl.form-control(type='text' placeholder='https://imagen.com')
+      .row.mb-2.justify-content-center
+        button#btnCanChgImg.btn.btn-secondary.mx-2(type='submit') Cancelar
+        button#btnCnfChgImg.btn.btn-primary.mx-2(type='submit') Aceptar
+    form#frmText
+      .row.mb-2
+        label.col-12.col-form-label Descripción
+        .col
+          textarea#inDesc.form-control(rows='3')
+      .row.mb-2
+        label.col-12.col-form-label Descripción corta
+        .col
+          textarea#inDescShort.form-control(rows='3')
+      .row.mb-2.justify-content-end
+        button.btn.btn-light.btn-link-scckie.mx-3(type='submit')
+          i.fas.fa-check
   .container-fluid.mb-2.rounded-lg.p-2.overflow-auto(style='background-color:#57238b;')
     .table-responsive
       table.table.table-bordered.table-light.rounded
