--- a/functions/views/archivo.pug
+++ b/functions/views/archivo.pug
@@ -12,7 +12,7 @@ block content
   nav(aria-label='breadcrumb')
     ol.breadcrumb.mb-3
       li.breadcrumb-item.active(aria-current='page') Archivo
-  .container-fluid.mb-2.rounded-lg.p-3(style='background-color:rebeccapurple;')
+  .container-fluid.mb-2.rounded-lg.p-3.bg-rebecca
     p Aquí puedes encontrar todas las galletas que tenemos.
     each tris, year in years 
       h2 !{year}
