--- a/functions/views/calendario.pug
+++ b/functions/views/calendario.pug
@@ -66,7 +66,7 @@ block precontent
                       li !{time}
 
 block content
-  div.container-fluid.mb-2.rounded-lg.p-3(style="background-color:rebeccapurple;")
+  div.container-fluid.mb-2.rounded-lg.p-3.bg-rebecca
     .row.px-4.py-2.mb-4
       a#btnPriorEve.btn.btn-lg.btn-light.btn-link-scckie.mr-auto(href=priorCal)
         i.fas.fa-arrow-left
