--- a/functions/views/galleta.pug
+++ b/functions/views/galleta.pug
@@ -38,7 +38,7 @@ block precontent
           button.btn.btn-primary(type='submit' form='frmRprt') Reportar
 
 block content
-  div.container-fluid.mb-2.rounded-lg.p-3(style="background-color:rebeccapurple;")
+  div.container-fluid.mb-2.rounded-lg.p-3.bg-rebecca
     each item in content
       case item.type
         when 'head'
