--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -3,6 +3,10 @@ body {
   font-weight: 600;
 }
 
+.bg-rebecca{
+  background-color: rebeccapurple;
+}
+
 strong {
   font-weight: 900;
   color: #f8f9fa;
