--- a/functions/views/archTrim.pug
+++ b/functions/views/archTrim.pug
@@ -1,8 +1,8 @@
 extends layouts/main
 
 block missHead
-  meta(name='description' content="Aquí puedes encontrar todas las galletas de " + triLC + "del" + year + ".")
-  link(rel='canonical' href=HOST+'/archivo/')
+  meta(name='description' content="Aquí puedes encontrar todas las galletas de "+triLC+"del"+year+".")
+  link(rel='canonical' href=HOST+'/archivo/'+year+'/'+triLC +'/')
   title Archivo #{year} #{triLC} - Science Cookies
 
   - const site="archTri";
