--- a/src/index.pug
+++ b/src/index.pug
@@ -12,7 +12,7 @@ block missHead
   - const site="index";
 
 block content
-  #calMain.container-fluid.mb-4.rounded-lg.p-3.d-none
+  #calMain.container-fluid.mb-4.rounded-lg.p-3.d-none.bg-rebecca
   form#frmSrch.mb-4
     .rounded.mb-1.pl-2.pt-1.cats-container
       .from-row
