--- a/functions/views/config/config.pug
+++ b/functions/views/config/config.pug
@@ -1,6 +1,3 @@
-- const HOST = "http://localhost:5000";
-- //    https://sciencecookies.net
-- //    http://localhost:5000
-- //    https://sciencecookies--pr30-pug-conversion-j8xqu70t.web.app/
+- const HOST = "https://sciencecookies.net";
 - const FBVERSION = "8.3.2";
 - const FBUIVERSION = "4.8.0";
