--- a/src/editar.pug
+++ b/src/editar.pug
@@ -147,9 +147,9 @@ block precontent
         i.fas.fa-plus
       button.btn.btn-scckie(data-toggle='modal' data-target='#mdlMedMan')
         i.fas.fa-image
-      button#btnPrevCook.btn.btn-scckie
+      a#btnPrevCook.btn.btn-scckie(target="_blank")
         i.fas.fa-eye
-      button#btnPrevMail.btn.btn-scckie
+      a#btnPrevMail.btn.btn-scckie(target="_blank")
         i.fas.fa-envelope
       button#btnPrivate.btn.btn-scckie.d-none
         i.fas.fa-lock
