--- a/src/includes/sidebarL.pug
+++ b/src/includes/sidebarL.pug
@@ -13,3 +13,5 @@
             .dropdown-divider.d-md-none
             h5.text-center Las galletas más populares
             #popCook
+        .col.justify-content-center.d-flex
+            a.btn.btn-link-scckie.mt-md-2(href="/archivo/") Ver más 
